fix: 요약정보 설명 overflow 현상 해결

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ body {
 .restaurant__info {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   justify-content: flex-start;
 }
 
@@ -164,12 +165,14 @@ body {
 }
 
 .restaurant__description {
-  display: -webkit-box;
+  display: block;
 
   padding-top: 8px;
 
-  overflow: auto;
+  overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
+
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
